community/objects/Block_of_Time__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Bill_Amount__c</fullName>
        <label>Additional Bill Amount (To Be Deleted)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Additional_Pay_Amount__c</fullName>
        <label>Additional Pay Amount (To Be Deleted)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bill_Target_Time_Type_Name__c</fullName>
        <formula>Bill_Target_Time_Type__r.Name</formula>
        <label>Bill Target Time Type Name (Hidden)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_Target_Time_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bill Target Time Type</label>
        <referenceTo>Time_Type__c</referenceTo>
        <relationshipLabel>Block of Times (Bill Time Type)</relationshipLabel>
        <relationshipName>Block_of_Times1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Block_Type__c</fullName>
        <formula>IF(AND(NOT(ISBLANK(Start_Time__c)),NOT(ISBLANK(End_Time__c))),&quot;Differential Block of Time&quot;,&quot;&quot;) &amp;
IF(AND(NOT(ISBLANK(Start_Date_Time__c)),NOT(ISBLANK(End_Date_Time__c))),&quot;Holiday Block of Time&quot;,&quot;&quot;)</formula>
        <label>Block Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <label>Client</label>
        <referenceTo>TR1__Branch__c</referenceTo>
        <relationshipLabel>Block of Times</relationshipLabel>
        <relationshipName>Block_of_Times</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Day_Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Weekend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Holiday - Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Holiday - Client</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>End_Date_Time__c</fullName>
        <label>End Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pay_Target_Time_Type_Name__c</fullName>
        <formula>Pay_Target_Time_Type__r.Name</formula>
        <label>Pay Target Time Type Name (Hidden)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pay_Target_Time_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pay Target Time Type</label>
        <referenceTo>Time_Type__c</referenceTo>
        <relationshipLabel>Block of Times</relationshipLabel>
        <relationshipName>Block_of_Times</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Qualifying_Time_Type__c</fullName>
        <label>Qualifying Time Type</label>
        <picklist>
            <picklistValues>
                <fullName>Base</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lunch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Holiday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call Back</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orientation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Call</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Start_Date_Time__c</fullName>
        <label>Start Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Block of Time</label>
    <nameField>
        <label>Block of Time Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Block of Times</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Populate_Holiday_Or_Differential_Times</fullName>
        <active>true</active>
        <errorConditionFormula>False
/*OR(
IF(NOT(ISBLANK(Start_Time__c)),IF(NOT(ISBLANK(Start_Date_Time__c)),TRUE,FALSE),FALSE),
IF(NOT(ISBLANK(End_Time__c)),IF(NOT(ISBLANK(End_Date_Time__c)),TRUE,FALSE),FALSE),
IF(NOT(ISBLANK(Start_Time__c)),IF(NOT(ISBLANK(End_Date_Time__c)),TRUE,FALSE),FALSE),
IF(NOT(ISBLANK(End_Time__c)),IF(NOT(ISBLANK(Start_Date_Time__c)),TRUE,FALSE),FALSE))*/</errorConditionFormula>
        <errorMessage>You can either populate Start Time &amp; End Time or Start Date Time &amp; End Date Time.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>StartTime_and_EndTime_length_validation</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
AND(NOT(ISBLANK(Start_Time__c)),LEN(Start_Time__c)&lt;&gt;5),
AND(NOT(ISBLANK(End_Time__c)),LEN(End_Time__c)&lt;&gt;5))</errorConditionFormula>
        <errorMessage>The Start/End Time should be 5 character long &amp; in 24 Hr (HH:MM) format.</errorMessage>
    </validationRules>
</CustomObject>